# InLink

./: .gitignore  CMakeLists.txt  Companies.csv  InLink_en_US.ts  Jobs_Groups.xlsx  LICENSE.txt  README.md  loginsignin.cpp  loginsignin.h  loginsignin.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  secret_key.h.in  splashscreen.cpp  splashscreen.h  splashscreen.ui  vcpkg.json
Components/: CMakeLists.txt  captcha.cpp  captcha.h  captchaimage.cpp  captchaimage.h  captchaverifier.cpp  captchaverifier.h  footerimageview.cpp  footerimageview.h  fullexapndedtabbedwidget.cpp  fullexapndedtabbedwidget.h  imageviewer.cpp  imageviewer.h  loginform.cpp  loginform.h  loginform.ui
Components/App/: chatcomponent.cpp  chatcomponent.h  chatcomponent.ui  homecomponent.cpp  homecomponent.h  homecomponent.ui  jobscomponent.cpp  jobscomponent.h  jobscomponent.ui  mecomponent.cpp  mecomponent.h  mecomponent.ui  usernetworkcomponent.cpp  usernetworkcomponent.h  usernetworkcomponent.ui
Components/Delegates/: chatdelegate.cpp  chatdelegate.h  chatdelegate.ui  commentwidget.cpp  commentwidget.h  commentwidget.ui  messagedelegate.cpp  messagedelegate.h  messagedelegate.ui  postwidget.cpp  postwidget.h  postwidget.ui  userinvitation.cpp  userinvitation.h  userinvitation.ui  usersuggestion.cpp  usersuggestion.h  usersuggestion.ui
Components/Dialogs/: chatdialog.cpp  chatdialog.h  chatdialog.ui  commentsdialog.cpp  commentsdialog.h  commentsdialog.ui  companysignin.cpp  companysignin.h  companysignin.ui  createpostdialog.cpp  createpostdialog.h  createpostdialog.ui  selectabilitiesdialog.cpp  selectabilitiesdialog.h  selectabilitiesdialog.ui  showfollowings.cpp  showfollowings.h  showfollowings.ui  showprofiledialog.cpp  showprofiledialog.h
Components/Textboxes/: codeverifierlayout.cpp  codeverifierlayout.h  codeverifyedit.cpp  codeverifyedit.h
Pages/: codeverifier.cpp  codeverifier.h  codeverifier.ui  completeprofile.cpp  completeprofile.h  completeprofile.ui  loginsignin.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  splashscreen.cpp  splashscreen.h  verifycodedialog.cpp  verifycodedialog.h  verifycodedialog.ui
Schematics/: account.cpp  account.h  comment.cpp  comment.h  company.cpp  company.h  content.cpp  content.h  directmessage.cpp  directmessage.h  job.cpp  job.h  like.cpp  like.h  person.cpp  person.h  post.cpp  post.h
Server/: package-lock.json  package.json  server.js
Server/database/: config.js
SplashScreen/: whois.cpp  whois.h  whois.ui
database/: Initial.db  dbinit.cpp  dbinit.h  encryption.cpp  encryption.h  encryption.hpp  user.cpp  user.h
database/Datas/: Abilities.csv  Cities.csv  Companies.csv  Countries.csv  Excel.xlsx  Groups.csv  INITIALDB.sql  Jobs.csv  Universities.csv
database/models/: companymodel.cpp  companymodel.h  contentmodel.cpp  contentmodel.h  directmessagemodel.cpp  directmessagemodel.h  postmodel.cpp  postmodel.h  time.cpp  time.h  usermodel.cpp  usermodel.h
db/: db_config.cpp  db_config.h  encryption.cpp  encryption.h  user.cpp  user.h
qss/: CaptchaVerifierTextBoxStyle.qss  CodeVerifyStyle.qss  CompleteProfileStyle.qss  FullExpandedTabbedWidget.qss  LoginStyle.qss  MainWindow.qss  PushButtonStyle.qss  SplashScreen.qss
qss/theme/: dark.qss  light.qss
test/: test_captcha.cpp  test_captcha.h  test_captcha.ui
utils/: Style.cpp  Style.h  Util.cpp  Util.h  preventclosingeventfilter.cpp  preventclosingeventfilter.h  waitformorefeature.cpp  waitformorefeature.h  waitformorefeature.ui
